fix wrapping in the log comments table

--- a/htmldocroot/table.css
+++ b/htmldocroot/table.css
@@ -2,6 +2,10 @@ body {
   font-family: "Arial", "sans-serif";
 }
 
+.nowrap {
+  white-space: nowrap;
+}
+
 .fullwidth {
   width: 100%;
   border: 0;
@@ -9,31 +13,26 @@ body {
 
 .tr_head {
   background-color: #A0A0FF;
-  white-space:nowrap;
   font-size: small
 }
 
 tr.alternating:nth-child(odd) {
   background-color: #F0F0FF;
-  white-space:nowrap;
   font-size: small
 }
 
 tr.alternating:nth-child(even) {
   background-color: #E0E0FF;
-  white-space:nowrap;
   font-size: small
 }
 
 tr.warn-alternating:nth-child(odd) {
   background-color: #FFF0F0;
-  white-space:nowrap;
   font-size: small
 }
 
 tr.warn-alternating:nth-child(even) {
   background-color: #FFE0E0;
-  white-space:nowrap;
   font-size: small
 }
 
